Add cover image

--- a/comicstore-web/src/main/webapp/index.xhtml
+++ b/comicstore-web/src/main/webapp/index.xhtml
@@ -4,11 +4,13 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
-
+	
 	<ui:define name="title">
 		<title>Comicstore - INDEX</title>
 	</ui:define>
-
+	
+	<ui:param name="selectMenu" value="index" />
+	
 	<ui:define name="content">
 		<h:outputText value="Hola Mundo" />
 	</ui:define>
